# ComfyUI-IF_AI_WishperSpeechNode

./: IFWhisperSpeechNode.py  README.md  __init__.py  pyproject.toml  requirements.txt
