[project]
name = "comfyui-if_ai_wishperspeechnode"
description = "This repository hosts a Text-to-Speech (TTS) application that leverages Whisper Speech for voice synthesis, allowing users to train a voice model on-the-fly. It is built on ComfyUI and supports rapid training and inference processes."
version = "1.0.1"
license = { file = "MIT License" }
dependencies = ["requests", "scipy", "nltk", "WhisperSpeech", "librosa", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_AI_WishperSpeechNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "IF_WishperSpeechNode"
Icon = "https://impactframes.ai/System/Icons/48x48/if.png"
